# CubeRotations

./: CMakeLists.txt  cube_alternative_algorithm.py  mainCube.py
CppApi/: Cube.cpp  Cube.h  CubeConstants.cpp  CubeConstants.h  Rotations.cpp  main.cpp
